# absl-cxx

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: aarch64_toolchain.yml  amd64_linux_bazel.yml  amd64_linux_cmake.yml  amd64_macos_bazel.yml  amd64_macos_cmake.yml  amd64_windows_bazel.yml  amd64_windows_cmake.yml  arm64_docker_cmake.yml  arm64_macos_bazel.yml  arm64_macos_cmake.yml  arm_toolchain.yml  mips64_toolchain.yml  mips_toolchain.yml  powerpc64_toolchain.yml  powerpc_toolchain.yml  riscv64_docker_cmake.yml  riscv64_toolchain.yml  s390x_toolchain.yml
app/: BUILD.bazel  CMakeLists.txt  app.cpp
bazel/: Makefile
bazel/docker/alpine/: Dockerfile
bazel/docs/: docker.dot
cmake/: AbslCxxConfig.cmake.in  Makefile  cpp.cmake  deps.cmake
cmake/dependencies/: CMakeLists.txt
cmake/docker/almalinux/: Dockerfile
cmake/docker/alpine/: Dockerfile
cmake/docker/archlinux/: Dockerfile
cmake/docker/debian/: Dockerfile
cmake/docker/fedora/: Dockerfile
cmake/docker/opensuse/: Dockerfile
cmake/docker/rockylinux/: Dockerfile
cmake/docker/toolchain/: Dockerfile
cmake/docker/ubuntu/: Dockerfile
cmake/docs/: deps.dot
cmake/samples/: CMakeLists.txt  main.cpp
foo/: BUILD.bazel  CMakeLists.txt  foo.cpp  foo.hpp  foo_test.cpp
patches/: BUILD.bazel
tools/: cross_compile.sh
