load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "app",
    srcs = ["app.cpp"],
    visibility = ["//visibility:public"],
    deps = [
      "//foo:foo",
      "@com_google_absl//absl/flags:parse",
      "@com_google_absl//absl/flags:usage",
      "@com_google_absl//absl/log",
      "@com_google_absl//absl/log:initialize",
      "@com_google_absl//absl/strings:string_view",
    ],
)

cc_test(
    name = "app_test",
    srcs = ["app.cpp"],
    deps = [
      "//foo:foo",
      "@com_google_absl//absl/flags:parse",
      "@com_google_absl//absl/flags:usage",
      "@com_google_absl//absl/log",
      "@com_google_absl//absl/log:initialize",
      "@com_google_absl//absl/strings:string_view",
    ],
)
